chore: dotenv package installed

--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
     "description": "server do chat online",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemo index.js ",
+        "dev": "nodemon index.js ",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "douglas <douglaslima13bezerr@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "socket.io": "^4.7.4"
     },
