--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -9,7 +9,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "indent": ["error", "tab"],
+        "indent": ["error", 4],
         "linebreak-style": ["error", "windows"],
         "quotes": ["error", "single"],
         "semi": ["error", "always"]
