--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon index.js ",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon index.jsx"
     },
     "author": "douglas <douglaslima13bezerr@gmail.com>",
     "license": "MIT",
